app/main/default/objects/Credentials__c/fields/Key__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Key__c</fullName>
        <label>Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>