app/main/default/objects/Credentials__c/fields/Redirect_URI__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Redirect_URI__c</fullName>
        <label>Redirect URI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>