app/main/default/objects/Credentials__c/fields/Secret__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Secret__c</fullName>
        <label>Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>